# open-hwpx

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: python-hwpx-api-notes.md
examples/: agent_report.py  article.md  gov_report_builder.py  gov_report_spec.json  load_from_spec.py
src/open_hwpx/: __init__.py  _compat.py  agent.py  cli.py  fonts.py  layout.py  markdown.py  mcp_server.py  report.py  structure.py
src/open_hwpx/components/: __init__.py  base.py  headerfooter.py  heading.py  image.py  lists.py  pagebreak.py  paragraph.py  table.py  toc.py
src/open_hwpx/read/: __init__.py  model.py  reader.py
src/open_hwpx/render/: __init__.py  paraprops.py  renderer.py
src/open_hwpx/render_html/: __init__.py  renderer.py
src/open_hwpx/spec/: __init__.py  loader.py  schema.py
src/open_hwpx/styles/: __init__.py  gov_korean.py  presets.py  theme.py  tokens.py
tests/: test_agent.py  test_agent_loop.py  test_cli.py  test_compat.py  test_edit.py  test_fonts.py  test_markdown.py  test_presets.py  test_render_html.py  test_roundtrip.py  test_spec.py  test_structure.py  test_theme.py
